[FEAT] 마이페이지 봉사활동 대시보드, 메뉴 액티비티 구현

--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -252,6 +252,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:drawableStart="@drawable/ic_location"
+                    android:drawableTint="@color/sharehands_green_medium"
                     android:drawablePadding="8dp"
                     android:textSize="16sp"
                     android:textColor="@color/text_color"
