--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -13,7 +13,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="320dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/sharehands_toolbar"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             android:elevation="0dp"
@@ -26,7 +26,7 @@
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
@@ -54,7 +54,8 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginTop="84dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginBottom="140dp">
 
                     <ImageView
                         android:id="@+id/user_profile"
@@ -122,10 +123,6 @@
                             android:src="@drawable/ic_forward_dir"
                             app:tint="@color/sharehands_black" />
 
-
-
-
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -160,22 +157,19 @@
 
                     </LinearLayout>
 
-
-
-
-
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_mgt_service"
                     android:layout_width="match_parent"
-                    android:layout_height="72dp"
+                    android:layout_height="120dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"/>
+                    android:nestedScrollingEnabled="false"
+                    android:layout_marginBottom="40dp"/>
 
 
             </RelativeLayout>
@@ -205,7 +199,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:layout_marginBottom="20dp">
 
                     <TextView
                         android:id="@+id/tv_logout"
@@ -221,7 +216,6 @@
                         android:layout_height="wrap_content"
                         android:text="|"
                         android:textSize="20sp"
-                        android:textStyle="bold"
                         android:layout_marginStart="4dp"/>
 
                     <TextView
