--- a/app/src/main/res/drawable/rectangle_shadow.xml
+++ b/app/src/main/res/drawable/rectangle_shadow.xml
@@ -5,7 +5,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#00CCCCCC" />
@@ -14,7 +14,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#06CCCCCC" />
@@ -23,7 +23,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#09CCCCCC" />
@@ -32,7 +32,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp"/>
+          android:bottom="1dp"/>
 
       <corners android:radius="20dp"/>
       <solid android:color="#0BCCCCCC" />
@@ -41,7 +41,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#0DCCCCCC" />
@@ -50,7 +50,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#10CCCCCC" />
@@ -59,7 +59,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#12CCCCCC" />
@@ -68,7 +68,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#15CCCCCC" />
@@ -77,7 +77,7 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp" />
+          android:bottom="1dp" />
 
       <corners android:radius="20dp"/>
       <solid android:color="#17CCCCCC" />
@@ -86,10 +86,10 @@
   <item>
     <shape>
       <padding
-          android:bottom="2.5dp"
-          android:left="2.5dp"
-          android:right="2.5dp"
-          android:top="2.5dp" />
+          android:bottom="1dp"
+          android:left="1dp"
+          android:right="1dp"
+          android:top="1dp" />
       <corners android:radius="20dp"/>
 
       <solid android:color="#1ACCCCCC" />
@@ -99,7 +99,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@android:color/white"/>
+      <solid android:color="@color/item_color"/>
       <corners android:radius="20dp"/>
       <stroke android:color="@color/sharehands_gray" android:width="2dp"/>
     </shape>
