--- a/app/src/main/res/layout/activity_service_write.xml
+++ b/app/src/main/res/layout/activity_service_write.xml
@@ -1009,7 +1009,7 @@
                     app:layout_constraintStart_toStartOf="@id/tv_photo_title"
                     app:layout_constraintTop_toBottomOf="@id/radio_etc"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="12dp">
+                    android:layout_marginBottom="136dp">
 
                     <EditText
                         android:id="@+id/edit_etc"
@@ -1074,8 +1074,7 @@
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:visibility="invisible"
-                    android:onClick="@{() -> viewModel.upload()}"/>
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/btn_submit_inactive"
