--- a/app/src/main/res/layout/fragment_search_tech.xml
+++ b/app/src/main/res/layout/fragment_search_tech.xml
@@ -5,12 +5,29 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_total_tech"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="searchtech"/>
+        android:text="총 x건의 봉사가 있어요."
+        android:textColor="@color/sharehands_green_strong"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"/>'
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_result_tech"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_total_tech"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
