[FIX] 마이페이지 스크롤 Motion 수정 및 회원가입 통신 오류 수정

--- a/app/src/main/res/layout/activity_permissions_agree.xml
+++ b/app/src/main/res/layout/activity_permissions_agree.xml
@@ -83,6 +83,7 @@
                 android:layout_height="36dp"
                 android:layout_marginStart="24dp"
                 android:src="@drawable/ic_camera"
+                app:tint="@color/text_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -94,7 +95,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:text="카메라 (선택)"
-                android:textColor="@color/sharehands_black"
+                android:textColor="@color/text_color"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/tv_camera_desc"
@@ -136,6 +137,7 @@
                 android:layout_height="36dp"
                 android:layout_marginStart="24dp"
                 android:src="@drawable/ic_location"
+                app:tint="@color/text_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -147,7 +149,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:text="위치 (선택)"
-                android:textColor="@color/sharehands_black"
+                android:textColor="@color/text_color"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/tv_location_desc"
