--- a/app/src/main/res/layout/activity_social_login.xml
+++ b/app/src/main/res/layout/activity_social_login.xml
@@ -1,40 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/sharehands_green_weak"
+        android:background="@drawable/sharehands_background"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/sharehands_logo_image"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:src="@drawable/sharehands_ic"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            app:layout_constraintBottom_toTopOf="@id/sharehands_logo_title"
-            app:layout_constraintVertical_weight="2"
-            android:layout_marginTop="80dp"/>
-
-        <ImageView
             android:id="@+id/sharehands_logo_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:src="@drawable/sharehands_full_char"
+            android:padding="80dp"
             android:layout_gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/sharehands_logo_image"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/sharehands_full_char"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="40dp"
             app:layout_constraintBottom_toTopOf="@id/tv_sharehands_intro"
-            app:layout_constraintVertical_weight="1"/>
+            app:layout_constraintVertical_weight="0.7" />
 
         <TextView
             android:id="@+id/tv_sharehands_intro"
@@ -42,14 +31,14 @@
             android:layout_height="0dp"
             android:text="올바른 봉사활동을 위한 길,\n쉐어핸즈와 함께해요"
             android:textSize="24sp"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/sharehands_green_strong"
             android:textStyle="bold"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="140dp"
             android:layout_marginStart="28dp"
             app:layout_constraintTop_toBottomOf="@id/sharehands_logo_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_sharehands_start"
-            app:layout_constraintVertical_weight="0.7"/>
+            app:layout_constraintVertical_weight="0.17"/>
 
         <TextView
             android:id="@+id/tv_sharehands_start"
@@ -59,11 +48,12 @@
             android:layout_marginStart="28dp"
             android:layout_marginTop="12dp"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:textColor="@color/sharehands_black"
             app:layout_constraintTop_toBottomOf="@id/tv_sharehands_intro"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_kakao_login"
-            app:layout_constraintVertical_weight="0.3"/>
+            app:layout_constraintVertical_weight="0.07"/>
 
 
         <TextView
