--- a/app/src/main/res/layout/activity_service_write.xml
+++ b/app/src/main/res/layout/activity_service_write.xml
@@ -141,6 +141,13 @@
                     app:layout_constraintStart_toEndOf="@id/layout_photo_select"
                     app:layout_constraintTop_toTopOf="@id/layout_photo_select" />
 
+                <ImageView
+                    android:id="@+id/iv_pre"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
                 <TextView
                     android:id="@+id/tv_category_title"
                     android:layout_width="wrap_content"
