--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path
+    <external-files-path
         name="my_images"
-        path="Android/data/com.sharehands.sharehands_frontend/files/Pictures" />
+        path="/Pictures" />
 </paths>
