--- a/app/src/main/res/layout/activity_recruit.xml
+++ b/app/src/main/res/layout/activity_recruit.xml
@@ -56,7 +56,7 @@
                     android:id="@+id/tv_recruited_applicants"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="모집한 회원"
+                    android:text="지원한 회원"
                     android:textSize="16sp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
