--- a/app/src/main/res/layout/activity_service_write.xml
+++ b/app/src/main/res/layout/activity_service_write.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
