--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -70,6 +70,7 @@
                             android:textColor="@color/text_color"
                             android:layout_marginStart="24dp"
                             android:textSize="16sp"
+                            android:maxLines="1"
                             android:background="@null"
                             android:layout_weight="9"
                             />
