--- a/app/src/main/res/layout/fragment_search_all.xml
+++ b/app/src/main/res/layout/fragment_search_all.xml
@@ -9,6 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/coordinator_layout"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <TextView
@@ -37,11 +38,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_result_all"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="24dp"/>
+                android:layout_height="wrap_content" />
 
             <ProgressBar
                 android:id="@+id/progress_all"
