--- a/app/src/main/res/drawable/border_bottom_blocked.xml
+++ b/app/src/main/res/drawable/border_bottom_blocked.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:bottom="1.5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#C3C3C3" />
+            <solid android:color="@color/item_color" />
         </shape>
     </item>
 </layer-list>
