--- a/app/src/main/res/drawable/frame_preview_profile.xml
+++ b/app/src/main/res/drawable/frame_preview_profile.xml
@@ -1,9 +1,12 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
-  <path
-      android:pathData="M10,10m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
-      android:fillColor="#D9D9D9"/>
-</vector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+
+  <corners android:radius="260dp"/>
+
+  <stroke
+      android:width="1dp"
+      android:color="@color/sharehands_gray">
+  </stroke>
+
+  <solid android:color="@color/sharehands_gray"/>
+
+</shape>
