--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="0dp"
@@ -28,21 +29,45 @@
                 app:contentInsetStart="0dp"
                 android:background="@android:color/transparent"
                 app:elevation="0dp"
-                app:layout_scrollFlags="scroll|enterAlways">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <RelativeLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/viewpager_thumbnails"
+                        android:layout_width="match_parent"
+                        android:layout_height="400dp"
+                        android:background="@color/sharehands_green_weak"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+
                     <ImageView
+                        android:id="@+id/btn_back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginBottom="24dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:padding="24dp"
                         android:src="@drawable/ic_back_black" />
 
-                </RelativeLayout>
+                    <TextView
+                        android:layout_width="52dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/chip_unchecked"
+                        android:backgroundTint="@color/item_color"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginBottom="12dp"
+                        android:layout_marginEnd="12dp"
+                        android:text="@{`/`}"
+                        android:textColor="@color/text_color"
+                        android:gravity="center"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -57,20 +82,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager_thumbnails"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:background="@color/sharehands_green_weak"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layout_user_profile"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/viewpager_thumbnails"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="28dp"
@@ -667,8 +683,6 @@
 
 
         </LinearLayout>
-
-
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
