--- a/app/src/main/res/layout/fragment_search_all.xml
+++ b/app/src/main/res/layout/fragment_search_all.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="총 x건의 봉사가 있어요."
+            android:text="@{`총 `+viewModel.serviceSum+`건의 봉사가 있습니다.`}"
             android:textColor="@color/sharehands_green_strong"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -38,12 +38,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_result_all"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"/>
 
             <ProgressBar
                 android:id="@+id/progress_all"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"/>
 
         </LinearLayout>
 
