--- a/app/src/main/res/layout/fragment_search_health.xml
+++ b/app/src/main/res/layout/fragment_search_health.xml
@@ -29,15 +29,13 @@
             android:id="@+id/rv_result_health"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginTop="12dp"/>
 
         <ProgressBar
             android:id="@+id/progress_health"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
 
