--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -701,6 +701,37 @@
                     android:textStyle="bold"
                     android:visibility="invisible"/>
 
+                <TextView
+                    android:id="@+id/btn_recruit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_button_green"
+                    android:elevation="20dp"
+                    android:text="모집하기"
+                    android:layout_marginEnd="20dp"
+                    android:textSize="16sp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:visibility="visible"/>
+
+                <TextView
+                    android:id="@+id/btn_recruit_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_button_green"
+                    android:elevation="20dp"
+                    android:text="모집 완료"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/sharehands_gray"
+                    android:textStyle="bold"
+                    android:visibility="invisible"/>
+
             </FrameLayout>
 
 
