[FEAT] 봉사활동 상세화면 프로필 호출 구현

--- a/app/src/main/res/layout/activity_recruit.xml
+++ b/app/src/main/res/layout/activity_recruit.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/tv_recruit_applicants"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="지원자 확인/모집"
+                    android:text="신청자 확인"
                     android:textColor="@color/sharehands_black"
                     android:layout_gravity="center"
                     android:textSize="20sp"
@@ -56,7 +56,7 @@
                     android:id="@+id/tv_recruited_applicants"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="지원한 회원"
+                    android:text="신청한 회원"
                     android:textSize="16sp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
