--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -101,6 +101,8 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
+                        android:scaleType="centerCrop"
+                        android:clipToOutline="true"
                         android:background="@drawable/item_user_profile"
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="8dp"
