--- a/app/src/main/res/layout/dialog_profile.xml
+++ b/app/src/main/res/layout/dialog_profile.xml
@@ -27,6 +27,8 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="120dp"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true"
             android:background="@drawable/item_user_profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
