--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -47,6 +47,21 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
 
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tab_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:scrollIndicators="none"
+                        app:layout_constraintBottom_toBottomOf="@id/viewpager_thumbnails"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:tabBackground="@drawable/selector_tab_white"
+                        android:background="@android:color/transparent"
+                        app:tabGravity="center"
+                        app:tabIndicator="@null"
+                        app:tabPaddingEnd="@dimen/dot_padding"
+                        app:tabPaddingStart="@dimen/dot_padding" />
+
                     <ImageView
                         android:id="@+id/btn_back"
                         android:layout_width="wrap_content"
@@ -56,18 +71,6 @@
                         android:padding="24dp"
                         android:src="@drawable/ic_back_black" />
 
-                    <TextView
-                        android:layout_width="52dp"
-                        android:layout_height="30dp"
-                        android:background="@drawable/chip_unchecked"
-                        android:backgroundTint="@color/item_color"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginBottom="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:text="@{`/`}"
-                        android:textColor="@color/text_color"
-                        android:gravity="center"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -171,7 +174,7 @@
 
                 <TextView
                     android:id="@+id/tv_service_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:textColor="@color/text_color"
@@ -179,6 +182,8 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_service_sort"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="24dp"
                     android:text="@{viewModel.contents.workTitle}"
                     tools:text="봉사 제목" />
 
