--- a/app/src/main/res/layout/item_service_search.xml
+++ b/app/src/main/res/layout/item_service_search.xml
@@ -75,83 +75,66 @@
             android:textSize="16sp"/>
 
 
-        <LinearLayout
-            android:id="@+id/layout_info1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+        <ImageView
+            android:id="@+id/iv_preview_location"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_location"
+            android:layout_gravity="start"
             app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
             app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            >
+            app:tint="@color/sharehands_green_medium"
+            />
 
-            <ImageView
-                android:id="@+id/iv_preview_location"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_location"
-                android:layout_gravity="start"
-                app:tint="@color/sharehands_green_medium"
-                android:layout_weight="0.5"
-                />
-
-            <TextView
-                android:id="@+id/tv_preview_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="동대문구"
-                android:textSize="11sp"
-                android:textStyle="bold"
-                android:textColor="@color/text_color"
-                android:gravity="start"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:maxLength="12"
-                android:ellipsize="end"
-                />
-
-            <ImageView
-                android:id="@+id/iv_preview_period"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_schedule"
-                android:layout_weight="0.5"
-                />
-
-            <TextView
-                android:id="@+id/tv_preview_period"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="2023.01.01 ~ 2023. 01.01"
-                android:maxLength="24"
-                android:textSize="11sp"
-                android:textStyle="bold"
-                android:textColor="@color/text_color"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_marginStart="2dp"
-                android:gravity="start"
-                android:layout_weight="2"
-                android:layout_gravity="center"
-                />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layout_info2"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_preview_location"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/layout_info1"
-            app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="24dp">
+            tools:text="동대문구"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:gravity="start"
+            android:layout_gravity="center"
+            android:maxLength="12"
+            android:ellipsize="end"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_location"
+            />
+
+        <ImageView
+            android:id="@+id/iv_preview_period"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_schedule"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/tv_preview_location"
+            android:layout_marginStart="20dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_preview_period"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="2023.01.01 ~ 2023. 01.01"
+            android:maxLength="24"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginStart="8dp"
+            android:gravity="start"
+            android:layout_gravity="center"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_period"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            />
+
 
             <ImageView
                 android:id="@+id/iv_preview_people"
@@ -159,7 +142,11 @@
                 android:layout_height="16dp"
                 android:src="@drawable/ic_people"
                 android:layout_gravity="start"
-                android:layout_weight="0.15"
+                app:layout_constraintTop_toBottomOf="@id/iv_preview_location"
+                app:layout_constraintStart_toStartOf="@id/iv_preview_location"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="20dp"
                 />
 
             <TextView
@@ -171,10 +158,13 @@
                 android:textStyle="bold"
                 android:textColor="@color/text_color"
                 android:gravity="start"
-                android:layout_weight="0.6"
                 android:layout_gravity="center"
                 android:maxLength="12"
                 android:ellipsize="end"
+                app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+                app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
+                app:layout_constraintStart_toEndOf="@id/iv_preview_people"
+                android:layout_marginStart="8dp"
                 />
 
             <ImageView
@@ -183,7 +173,9 @@
                 android:layout_height="16dp"
                 android:src="@drawable/ic_clock"
                 app:tint="@color/sharehands_green_medium"
-                android:layout_weight="0.25"
+                app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+                app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
+                app:layout_constraintStart_toStartOf="@id/iv_preview_period"
                 />
 
             <TextView
@@ -196,14 +188,14 @@
                 android:textColor="@color/text_color"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:layout_marginStart="2dp"
+                android:layout_marginStart="8dp"
                 android:gravity="start"
-                android:layout_weight="2"
                 android:layout_gravity="center"
+                app:layout_constraintStart_toEndOf="@id/iv_preview_day"
+                app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+                app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
                 />
 
-
-        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/btn_frame"
