[FEAT] 일정 관리 오늘의 봉사 확인, 월별 봉사 확인 기능 구현

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="dot_size">3dp</dimen>
     <dimen name="dot_padding">8dp</dimen>
+    <dimen name="pageMargin">52dp</dimen>
+    <dimen name="pageWidth">280dp</dimen>
 </resources>
