--- a/app/src/main/res/drawable/schedule_check.xml
+++ b/app/src/main/res/drawable/schedule_check.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/item_color"></solid>
     <corners android:topLeftRadius="28dp" android:topRightRadius="28dp"/>
-    <stroke android:width="2dp" android:color="@color/sharehands_green_medium"/>
+    <stroke android:width="1dp" android:color="@color/sharehands_gray"/>
 </shape>
