--- a/app/src/main/res/layout/activity_monthly_calendar.xml
+++ b/app/src/main/res/layout/activity_monthly_calendar.xml
@@ -6,6 +6,10 @@
         <variable
             name="schedule_monthly"
             type="com.sharehands.sharehands_frontend.model.schedule.MonthlySchedule" />
+        
+        <variable
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.schedule.MonthlyCalendarViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -27,6 +31,7 @@
                 android:layout_height="match_parent"
                 android:elevation="0dp"
                 app:elevation="0dp"
+                app:contentInsetStart="0dp"
                 >
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,7 +43,8 @@
                         android:id="@+id/btn_back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
+                        android:padding="20dp"
+                        android:layout_marginStart="8dp"
                         android:src="@drawable/ic_back_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +57,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"
                         android:background="#00000000"
-                        android:text="월별 계획   "
+                        android:text="월별 계획"
                         android:textColor="@color/sharehands_black"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -102,7 +108,7 @@
         <FrameLayout
             android:id="@+id/view_schedule_mgt"
             android:layout_width="match_parent"
-            android:layout_height="800dp"
+            android:layout_height="700dp"
             app:layout_behavior="@string/bottom_sheet_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -117,12 +123,12 @@
 
                 <View
                     android:id="@+id/controller"
-                    android:layout_width="60dp"
-                    android:layout_height="8dp"
+                    android:layout_width="52dp"
+                    android:layout_height="6dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@color/sharehands_green_medium"
+                    android:background="@drawable/rectangle_login"
                     android:layout_marginTop="20dp" />
 
                 <LinearLayout
