--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -17,10 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="68dp"
             android:background="@drawable/sharehands_toolbar"
+            android:elevation="0dp"
             android:shadowColor="@color/sharehands_gray"
             android:shadowDy="20"
             android:shadowRadius="20"
-            android:elevation="0dp"
             app:elevation="32dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,7 +54,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/tv_today_month"
+                    android:id="@+id/tv_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -63,69 +63,68 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="3" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_today_sep"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="/"
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/tv_today_month"
-                    app:layout_constraintTop_toTopOf="@id/tv_today_month" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_today_sep"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="4dp"-->
+                <!--                    android:text="/"-->
+                <!--                    android:textColor="@color/text_color"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold"-->
+                <!--                    app:layout_constraintStart_toEndOf="@id/tv_today_month"-->
+                <!--                    app:layout_constraintTop_toTopOf="@id/tv_today_month" />-->
 
-                <TextView
-                    android:id="@+id/tv_today_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/tv_today_sep"
-                    app:layout_constraintTop_toTopOf="@id/tv_today_sep"
-                    tools:text="20" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_today_date"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="4dp"-->
+                <!--                    android:textColor="@color/text_color"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold"-->
+                <!--                    app:layout_constraintStart_toEndOf="@id/tv_today_sep"-->
+                <!--                    app:layout_constraintTop_toTopOf="@id/tv_today_sep"-->
+                <!--                    tools:text="20" />-->
 
-                <TextView
-                    android:id="@+id/tv_today_day_start"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="("
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/tv_today_date"
-                    app:layout_constraintTop_toTopOf="@id/tv_today_date" />
-
-
-                <TextView
-                    android:id="@+id/tv_today_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/tv_today_day_start"
-                    app:layout_constraintTop_toTopOf="@id/tv_today_day_start"
-                    tools:text="월" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_today_day_start"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="8dp"-->
+                <!--                    android:text="("-->
+                <!--                    android:textColor="@color/text_color"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold"-->
+                <!--                    app:layout_constraintStart_toEndOf="@id/tv_today_date"-->
+                <!--                    app:layout_constraintTop_toTopOf="@id/tv_today_date" />-->
 
 
-                <TextView
-                    android:id="@+id/tv_today_day_end"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=")"
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/tv_today_day"
-                    app:layout_constraintTop_toTopOf="@id/tv_today_day_start" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_today_day"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="2dp"-->
+                <!--                    android:textColor="@color/text_color"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold"-->
+                <!--                    app:layout_constraintStart_toEndOf="@id/tv_today_day_start"-->
+                <!--                    app:layout_constraintTop_toTopOf="@id/tv_today_day_start"-->
+                <!--                    tools:text="월" />-->
+
+
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_today_day_end"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:text=")"-->
+                <!--                    android:textColor="@color/text_color"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold"-->
+                <!--                    app:layout_constraintStart_toEndOf="@id/tv_today_day"-->
+                <!--                    app:layout_constraintTop_toTopOf="@id/tv_today_day_start" />-->
 
                 <ImageView
                     android:id="@+id/iv_service_today"
@@ -134,75 +133,112 @@
                     android:layout_marginStart="22dp"
                     android:layout_marginTop="20dp"
                     android:src="@drawable/ic_clock"
-                    app:tint="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_today_month" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_today"
+                    app:tint="@color/text_color" />
 
                 <TextView
                     android:id="@+id/tv_service_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
                     android:text="오늘 해야 할 봉사"
                     android:textColor="@color/text_color"
                     android:textSize="16dp"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@id/iv_service_today"
                     app:layout_constraintStart_toEndOf="@id/iv_service_today"
                     app:layout_constraintTop_toTopOf="@id/iv_service_today" />
 
-                <ImageView
+                <TextView
                     android:id="@+id/iv_goto_calendar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/tv_service_today"
-                    app:layout_constraintTop_toTopOf="@id/tv_service_today"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_service_today"
-                    android:src="@drawable/ic_forward_dir"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="12dp"
+                    android:drawableEnd="@drawable/ic_forward_dir"
                     android:padding="12dp"
-                    android:layout_marginTop="2dp"/>
+                    android:text="캘린더 보기  "
+                    app:layout_constraintBottom_toBottomOf="@id/tv_service_today"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_service_today" />
 
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_service_today"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_today_services"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="140dp"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
-                    android:padding="20dp"
+                    android:background="@drawable/rectangle_shadow_stroke"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_service_today" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_service_today">
+
+                    <!--                    <androidx.recyclerview.widget.RecyclerView-->
+                    <!--                        android:id="@+id/rv_service_today"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="match_parent"-->
+                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
+                    <!--                        app:layout_constraintTop_toTopOf="parent"-->
+                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--                        android:padding="8dp"/>-->
+
+                    <TextView
+                        android:id="@+id/tv_today_none"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="오늘은 봉사가 없습니다."
+                        android:textColor="@color/icon_unfilled"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/vp_today_services"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:layout_marginTop="-8dp"
+                    android:clipChildren="false"
+                    android:clipToOutline="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/layout_today_services" />
 
                 <ImageView
                     android:id="@+id/iv_check_list"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="22dp"
-                    android:layout_marginTop="20dp"
-                    app:tint="@color/text_color"
+                    android:layout_marginTop="24dp"
+                    android:src="@drawable/ic_checklist"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rv_service_today"
-                    android:src="@drawable/ic_checklist"/>
+                    app:layout_constraintTop_toBottomOf="@id/layout_today_services"
+                    app:tint="@color/text_color" />
 
                 <TextView
                     android:id="@+id/tv_check_list"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="@id/iv_check_list"
-                    app:layout_constraintBottom_toBottomOf="@id/iv_check_list"
-                    app:layout_constraintStart_toEndOf="@id/iv_check_list"
-                    android:text="준비물 체크"
+                    android:layout_marginStart="4dp"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
+                    android:text="준비물 체크"
+                    android:textColor="@color/text_color"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="@color/text_color"
-                    android:layout_marginStart="4dp"/>
+                    app:layout_constraintBottom_toBottomOf="@id/iv_check_list"
+                    app:layout_constraintStart_toEndOf="@id/iv_check_list"
+                    app:layout_constraintTop_toTopOf="@id/iv_check_list" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_check_list"
@@ -221,27 +257,27 @@
                     android:id="@+id/iv_memo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_memo"
-                    app:tint="@color/text_color"
-                    app:layout_constraintTop_toBottomOf="@id/rv_check_list"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="22dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="22dp"/>
+                    android:src="@drawable/ic_memo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_check_list"
+                    app:tint="@color/text_color" />
 
                 <TextView
                     android:id="@+id/tv_memo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/iv_memo"
-                    app:layout_constraintTop_toTopOf="@id/iv_memo"
-                    app:layout_constraintBottom_toBottomOf="@id/iv_memo"
-                    android:text="메모"
+                    android:layout_marginStart="4dp"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
+                    android:text="메모"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:layout_marginStart="4dp"/>
+                    app:layout_constraintBottom_toBottomOf="@id/iv_memo"
+                    app:layout_constraintStart_toEndOf="@id/iv_memo"
+                    app:layout_constraintTop_toTopOf="@id/iv_memo" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_memo"
@@ -250,12 +286,12 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="80dp"
                     android:padding="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_memo"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="80dp"/>
+                    app:layout_constraintTop_toBottomOf="@id/tv_memo" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
