--- a/app/src/main/res/layout/item_monthly_schedule.xml
+++ b/app/src/main/res/layout/item_monthly_schedule.xml
@@ -1,168 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/rectangle_shadow_rad40">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <ImageView
-        android:id="@+id/iv_schedule"
-        android:layout_width="64dp"
-        android:layout_height="56dp"
-        android:src="@drawable/ic_schedule"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="28dp"
-        android:paddingTop="4dp"
-        android:layout_marginStart="28dp" />
-
-    <LinearLayout
-        android:id="@+id/layout_date"
-        app:layout_constraintTop_toBottomOf="@id/iv_schedule"
-        app:layout_constraintStart_toStartOf="@id/iv_schedule"
-        app:layout_constraintEnd_toEndOf="@id/iv_schedule"
-
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@drawable/rectangle_shadow_rad40">
 
-        <TextView
-            android:id="@+id/tv_schedule_month"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="3"
-            android:textColor="@color/text_color"
-            android:textStyle="bold"
-            android:textSize="24sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="/"
-            android:textColor="@color/text_color"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:layout_marginStart="4dp"/>
-
-        <TextView
-            android:id="@+id/tv_schedule_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="24"
-            android:textColor="@color/text_color"
-            android:textStyle="bold"
-            android:layout_marginStart="4dp"
-            android:textSize="24sp"/>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_schedule_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_schedule"
-        app:layout_constraintStart_toEndOf="@id/iv_schedule"
-        android:layout_marginStart="20dp"
-        tools:text="봉사 이름"
-        android:textStyle="bold"
-        android:textColor="@color/text_color"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/tv_schedule_dday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_schedule_title"
-        app:layout_constraintBottom_toBottomOf="@id/tv_schedule_title"
-        app:layout_constraintStart_toEndOf="@id/tv_schedule_title"
-        android:text="D-"
-        android:textColor="@color/sharehands_green_strong"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:layout_marginStart="28dp"/>
-
-    <TextView
-        android:id="@+id/tv_schedule_dday_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_schedule_title"
-        app:layout_constraintBottom_toBottomOf="@id/tv_schedule_title"
-        app:layout_constraintStart_toEndOf="@id/tv_schedule_dday"
-        tools:text="5"
-        android:textColor="@color/sharehands_green_strong"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        />
-
-    <LinearLayout
-        android:id="@+id/layout_location_time"
-        app:layout_constraintStart_toStartOf="@id/tv_schedule_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_schedule_title"
-        android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="28dp">
-
-        <TextView
-            android:id="@+id/tv_schedule_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="한국외국어대학교"
-            android:textSize="20sp"
-            android:textColor="@color/text_color"/>
+        <ImageView
+            android:id="@+id/iv_schedule"
+            android:layout_width="30dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_schedule"
+            app:layout_constraintStart_toStartOf="@id/layout_date"
+            app:layout_constraintEnd_toEndOf="@id/layout_date"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"/>
 
         <LinearLayout
+            android:id="@+id/layout_date"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_schedule"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/tv_schedule_start_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/text_color"
-                android:textSize="20sp"
-                tools:text="12:00"/>
+            android:orientation="horizontal"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="24dp">
 
             <TextView
-                android:id="@+id/tv_schedule_time_sep"
+                android:id="@+id/tv_schedule_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="~"
+                tools:text="3"
                 android:textColor="@color/text_color"
+                android:textStyle="bold"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textColor="@color/text_color"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginStart="4dp"/>
+
+            <TextView
+                android:id="@+id/tv_schedule_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="24"
+                android:textColor="@color/text_color"
+                android:textStyle="bold"
                 android:layout_marginStart="4dp"
-                android:textSize="20sp"/>
+                android:textSize="16sp"/>
 
-            <TextView
-                android:id="@+id/tv_schedule_end_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/text_color"
-                android:textSize="20sp"
-                android:layout_marginStart="4dp"
-                tools:text="13:00"/>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_schedule_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/iv_schedule"
+            app:layout_constraintStart_toEndOf="@id/iv_schedule"
+            app:layout_constraintEnd_toStartOf="@id/tv_schedule_dday"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            tools:text="봉사 이름"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:textSize="12sp" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_schedule_dday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/tv_schedule_dday_num"
+            app:layout_constraintTop_toTopOf="@id/tv_schedule_dday_num"
+            app:layout_constraintBottom_toBottomOf="@id/tv_schedule_dday_num"
+            android:text="D"
+            android:textColor="@color/sharehands_green_strong"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginStart="28dp"/>
 
-    <ImageView
-        android:id="@+id/iv_view_detail"
-        android:layout_width="16dp"
-        android:layout_height="28dp"
-        android:src="@drawable/ic_forward_dir"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="32dp"
-        app:tint="@color/text_color"/>
+        <TextView
+            android:id="@+id/tv_schedule_dday_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/iv_view_detail"
+            app:layout_constraintTop_toTopOf="@id/tv_schedule_title"
+            android:layout_marginEnd="20dp"
+            tools:text="5"
+            android:textColor="@color/sharehands_green_strong"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            />
+
+        <LinearLayout
+            android:id="@+id/layout_location_time"
+            app:layout_constraintStart_toStartOf="@id/tv_schedule_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_schedule_title"
+            android:layout_marginTop="6dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/iv_view_detail"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="16dp">
+
+            <TextView
+                android:id="@+id/tv_schedule_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="한국외국어대학교"
+                android:textSize="12sp"
+                android:textColor="@color/text_color"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/tv_schedule_start_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_color"
+                    android:textSize="12sp"
+                    tools:text="12:00"/>
+
+                <TextView
+                    android:id="@+id/tv_schedule_time_sep"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="~"
+                    android:textColor="@color/text_color"
+                    android:layout_marginStart="4dp"
+                    android:textSize="12sp"
+                    android:visibility="invisible"/>
+
+                <TextView
+                    android:id="@+id/tv_schedule_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_color"
+                    android:textSize="12sp"
+                    android:layout_marginStart="4dp"
+                    android:visibility="invisible"
+                    tools:text="13:00"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_view_detail"
+            android:layout_width="12dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_forward_dir"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="32dp"
+            app:tint="@color/text_color"/>
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
