--- a/app/src/main/res/layout/item_today_service.xml
+++ b/app/src/main/res/layout/item_today_service.xml
@@ -1,61 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout>
+    <data>
 
-    <LinearLayout
-        android:id="@+id/layout_time_location"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/layout_time_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_today_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:textColor="@color/sharehands_green_strong"
+                android:textSize="12sp"
+                tools:text="시간" />
+
+
+            <TextView
+                android:id="@+id/tv_today_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:maxLines="1"
+                android:textColor="@color/text_color"
+                android:textSize="12sp"
+                tools:text="장소명" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_today_time"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_today_title"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:textColor="@color/sharehands_green_strong"
-            android:textSize="20sp"
-            tools:text="시간" />
-
-
-        <TextView
-            android:id="@+id/tv_today_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="24dp"
             android:layout_weight="1"
-            android:ellipsize="marquee"
-            android:maxLines="1"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textColor="@color/text_color"
-            android:textSize="20sp"
-            tools:text="장소명" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_today_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="12dp"
-        android:layout_weight="1"
-        android:ellipsize="marquee"
-        android:maxLines="1"
-        android:textColor="@color/text_color"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/layout_time_location"
-        app:layout_constraintTop_toBottomOf="@id/layout_time_location"
-        tools:text="봉사 이름" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/layout_time_location"
+            app:layout_constraintTop_toBottomOf="@id/layout_time_location"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="봉사 이름" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
